--- a/_config.yml
+++ b/_config.yml
@@ -101,10 +101,10 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/ben-hamilton-data-scientist-extraordinaire/"
-  pinterest        :
+  pinterest        : 
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            : 
+  steam            : "https://steamcommunity.com/profiles/76561198067244767/"
   tumblr           :
   vine             :
   weibo            :
