--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   pinterest        : 
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            : "https://steamcommunity.com/profiles/76561198067244767/"
+  steam            : "https://steamcommunity.com/id/bham88"
   tumblr           :
   vine             :
   weibo            :
