--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/bham88"
+  github           : "bham88"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ben-hamilton-data-scientist-extraordinaire/"
+  linkedin         : "ben-hamilton-data-scientist-extraordinaire/"
   pinterest        : 
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
